[tool.poetry]
name = "marstons-webscrape"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "marstons_webscrape"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
async-scrape = "^0.1.18"
selenium = "^4.10.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
